[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Sijmen Schoon <me@sijmenschoon.nl>"]
edition = "2018"

[profile.release]
debug = true

[[bin]]
name = "01"
path = "01/01.rs"

[[bin]]
name = "02"
path = "02/main.rs"

[[bin]]
name = "03"
path = "03/main.rs"

[[bin]]
name = "04"
path = "04/main.rs"

[[bin]]
name = "05"
path = "05/main.rs"

[[bin]]
name = "06"
path = "06/main.rs"

[[bin]]
name = "07"
path = "07/main.rs"

[[bin]]
name = "08"
path = "08/main.rs"

[[bin]]
name = "09"
path = "09/main.rs"

[[bin]]
name = "10"
path = "10/main.rs"

[[bin]]
name = "11"
path = "11/main.rs"

[[bin]]
name = "12"
path = "12/main.rs"

[[bin]]
name = "13"
path = "13/main.rs"

[[bin]]
name = "14"
path = "14/main.rs"

[[bin]]
name = "15"
path = "15/main.rs"

[[bin]]
name = "16"
path = "16/main.rs"

[dependencies]
ordered-float = "1.0"
text_io = "0.1.7"
regex = "1"
